WIP
-----------------------------
* Pace Notes Playback
  - Replaced all "Set" buttons with a single "Apply" button for applying changes.
  - Add "Pace Notes Playback Enabled" notification to main window when playback enabled.

* Spectate Mode
  - Fixed an error if player index is set lower than "-1" in "Shared Memory API" config.

* Trailing Widget
  - Add "show_absolute_ffb" option, which converts force feedback value to absolute value before plotting.
    Disable this option to show force feedback plot in both positive and negative range.

2.24.0 (2025-02-06)
-----------------------------
* General
  - Add log info for showing various style presets loading status.
  - Unified preset backup file name format.
  - Add preset file validation for "classes.json" and "compounds.json".
  - Removed "tyre_compound_symbol" option from "units" config.

* [New]Compounds Preset
  - Add new "compounds.json" preset file in "settings" folder, which is used for displaying custom
    tyre compound symbol and heatmap style that matches specific tyre compounds.
  - Add default tyre compound styles for all tyres currently found in "LMU".
  - Add default tyre compound styles for some popular vehicles found in "RF2".
  - Add tyre compounds auto-detection system, which automatically adds missing tyre compounds found
    from all running vehicles to "compounds.json" and assigns closest matched compound symbols.
    A "?" symbol will be displayed if a compound name is not commonly known.
  - "compounds" file name is now reserved for "compounds.json" preset.

* [New]Tyre Compound Editor
  - Add "Tyre Compound Editor" to "Tools" menu in main window, which allows customizing "compounds.json" preset.
    See User Guide "Compounds preset" section for complete usage.

* Classes Preset
  - Extended classes preset structure to support more customization in future.
    The new structure now saves alternative "class name" under "alias" key, and "class color" under "color" key.