@@ -319,6 +319,7 @@ WIDGET_DEFAULT = {
         "bar_padding_horizontal": 0.5,
         "bar_padding_vertical": 0.4,
         "bar_gap": 2,
+        "decimal_places": 3,
         "deltabest_source": "Best",
         "font_color_deltabest": "#000000",
         "bkg_color_deltabest": "#222222",
@@ -345,6 +346,7 @@ WIDGET_DEFAULT = {
         "font_weight": "bold",
         "bar_padding": 0.2,
         "bar_gap": 2,
+        "decimal_places": 3,
         "show_all_time_deltabest": True,
         "font_color_all_time_deltabest": "#000000",
         "bkg_color_all_time_deltabest": "#FFFFFF",
